--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>RichEditor-dev-hmr</title>
 </head>
 <body>
 <div id="root"></div>
+<script type="text/javascript" src="./bundle.js"></script>
 </body>
 </html>
