cf-rich-editor 2017/4/26 更新内容： 1、demo/RichEditor.js: 添加 snifferApi:网址嗅探接口，数据结构{ url:'', param:'' } 2、src/DraftRichEditor.js: (1)npm install uuid:通过uuid设置多媒体实体，使得每个实体都有一个唯一的id根据uuid，去更改图片的长宽 (2)添加组件 ImageUploadCtrl:图片上传按钮组件，主要针对本地的图片上传并回显到编辑器 3、src/Decorators/components: (1)AtomicAudio:音频渲染组件 (2)AtomicImage:图片渲染组件 (3)AtomicVideo:视频渲染组件，增加图片更改长宽的面板，可以更改图片大小 4、example 示例代码 (1)将远程库都本地部署 (2)EditorRecur组件使用，添加即时预览功能

--- a/example/cf-rich-editor.html
+++ b/example/cf-rich-editor.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>cf-rich-editor</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./css/font-awesome.min.css">
     <link rel="stylesheet" href="../dist/CFRichEditor.css" />
 </head>
 <body>
@@ -11,7 +11,7 @@
 </body>
 <script src="../node_modules/react/dist/react.js"></script>
 <script src="../node_modules/react-dom/dist/react-dom.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.js"></script>
+<script src="./js/babel.min.js"></script>
 <script src="../dist/CFRichEditor.js"></script>
 <script type="text/babel">
     'use strict';
@@ -20,14 +20,16 @@
     class DemoRichEditor extends React.Component {
         constructor(props) {
             super(props);
+            this.state = { rawContentState:{} }
             this.onChange = this._onChange.bind(this);
         }
 
         _onChange(html, rawState) {
-            console.log(rawState);
+            this.setState({ rawContentState: rawState });
         }
 
         render() {
+            const { rawContentState } = this.state;
             return (
                     <div style={{ margin: '10px 20%' }}>
                         <RichEditor
@@ -35,6 +37,8 @@
                                 initialHtml="<p>demo</p>"
                                 onChange={this.onChange}
                         />
+                        <h1>预览</h1>
+                        <EditorRecur rawContentState={rawContentState} />
                     </div>
             );
         }
