cf-rich-editor 2017/4/27 更新内容： 1、修复HMR不能正常热更新的bug 2、build-dist 使用全局变量入口dist-entry.js

--- a/example/cf-rich-editor.html
+++ b/example/cf-rich-editor.html
@@ -20,7 +20,7 @@
     class DemoRichEditor extends React.Component {
         constructor(props) {
             super(props);
-            this.state = { rawContentState:{} }
+            this.state = { rawContentState:{} };
             this.onChange = this._onChange.bind(this);
         }
 
@@ -35,6 +35,7 @@
                         <RichEditor
                                 importHtml
                                 initialHtml="<p>demo</p>"
+                                snifferApi={{ url: 'http://192.168.1.49:8080/CFSP/web/checkUrl', param: 'urlStr' }}
                                 onChange={this.onChange}
                         />
                         <h1>预览</h1>
