cf-rich-editor 2017/4/28 更新内容： 1、snifferApi 属性修改为 sniffer:{ check:true, url:'嗅探接口', param:'接收地址参数名称'} 2、重写draft.js的原始样式 3、bug修正：修改图片大小面板，长宽比例锁定更改会出现长宽文本框为空时无法更改 4、回归测试：修正：snifferApi 修改为 sniffer 所引起的bug 5、图片上传失败提醒

--- a/example/cf-rich-editor.html
+++ b/example/cf-rich-editor.html
@@ -20,7 +20,7 @@
     class DemoRichEditor extends React.Component {
         constructor(props) {
             super(props);
-            this.state = { rawContentState:{} };
+            this.state = { rawContentState: {} };
             this.onChange = this._onChange.bind(this);
         }
 
@@ -30,12 +30,15 @@
 
         render() {
             const { rawContentState } = this.state;
+            // sniffer:网址嗅探打开{ check:true, url:'嗅探接口', param:'传入地址参数名称' }
             return (
                     <div style={{ margin: '10px 20%' }}>
                         <RichEditor
                                 importHtml
                                 initialHtml="<p>demo</p>"
-                                snifferApi={{ url: 'http://192.168.1.49:8080/CFSP/web/checkUrl', param: 'urlStr' }}
+                                sniffer={{
+                                    check: false,
+                                }}
                                 onChange={this.onChange}
                         />
                         <h1>预览</h1>
