cf-rich-editor@1.1.2 2017/5/16 更新内容： 1.修复在js内部 require babel-polyfill 仍然报错：regeneratorRuntime is not defined; 2.修复图片上传图标切换为 loading 画面图标时，仍然能点击呼出文件夹 3.修复同一张图片（文件名完全相同）不能连续再次上传 4.dist文件名更改为[name].min.js 和 [name].min.css

--- a/example/cf-rich-editor.html
+++ b/example/cf-rich-editor.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>cf-rich-editor</title>
     <link rel="stylesheet" href="./css/font-awesome.min.css">
-    <link rel="stylesheet" href="../dist/CFRichEditor.css" />
+    <link rel="stylesheet" href="../dist/CFRichEditor.min.css" />
 </head>
 <body>
 <div id="root"></div>
@@ -12,7 +12,7 @@
 <script src="../node_modules/react/dist/react.js"></script>
 <script src="../node_modules/react-dom/dist/react-dom.js"></script>
 <script src="./js/babel.min.js"></script>
-<script src="../dist/CFRichEditor.js"></script>
+<script src="../dist/CFRichEditor.min.js"></script>
 <script type="text/babel">
     'use strict';
 
